--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,15 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.4",
+    "authlib>=1.6.1",
+    "bcrypt>=4.3.0",
     "bson>=0.5.10",
     "fastapi[standart]>=0.116.1",
+    "itsdangerous>=2.2.0",
+    "passlib>=1.7.4",
     "psycopg2-binary>=2.9.10",
     "pydantic-settings>=2.10.1",
+    "pyjwt>=2.10.1",
     "ruff>=0.12.7",
     "scalar-fastapi>=1.2.3",
     "sqlmodel>=0.0.24",
